--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,9 @@ a {
     width: 80px;
     height: 100%;
     overflow: hidden;
-    background-color: rgb(24, 89, 145);
+    background-image: url(../img/sidebar-bg.png);
+    background-size: cover ;
+    background-color: rgb(14, 14, 69);
 }
 
 .ms_content {
