--- a/css/style.css
+++ b/css/style.css
@@ -98,8 +98,13 @@ form:hover { background-color: white;}
 
 /* IMMAGE HEADER SECTION */
 
-.ms_small-img img {
+.ms_small-img img{
     height: 60px;
+}
+.ms_table-img img{
+    height: 25px;
+    width: 25px; 
+    margin-right: .3rem;  
 }
 
 
@@ -114,5 +119,18 @@ form:hover { background-color: white;}
 
 
 .ms_btn-newstudent {
-    padding: 0 .4rem;
+    padding: -2rem .4rem;
+    
+}
+
+.ms_planapp {
+    background-color: rgb(19, 19, 115);
+}
+
+/* TABBLE  */
+
+td.ms_table {
+    display: flex;
+    align-items: center;
+    padding: 1rem 0;
 }
